--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clone-deep": "^4.0.1",
     "colorette": "^2.0.20",
     "commander": "^2.20.3",
+    "cors": "^2.8.5",
     "cross-spawn": "^7.0.3",
     "electron-to-chromium": "^1.4.454",
     "enhanced-resolve": "^5.15.0",
