--- a/package.json
+++ b/package.json
@@ -43,12 +43,15 @@
     "jest-worker": "^27.5.1",
     "json-parse-even-better-errors": "^2.3.1",
     "json-schema-traverse": "^0.4.1",
+    "jsonwebtoken": "^9.0.2",
     "kind-of": "^6.0.3",
     "loader-runner": "^4.3.0",
     "locate-path": "^5.0.0",
     "merge-stream": "^2.0.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
+    "mongodb": "^6.5.0",
+    "mongoose": "^8.2.2",
     "neo-async": "^2.6.2",
     "node-releases": "^2.0.13",
     "p-limit": "^2.3.0",
@@ -101,6 +104,7 @@
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "babel-loader": "^9.1.3",
+    "bcrypt": "^5.1.1",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.44.0",
